plugins {
    id "net.minecraftforge.gradle" version "5.1.+"
    id "com.matthewprenger.cursegradle" version "1.4.0"
    id "org.spongepowered.mixin" version "0.7.+"
    id "org.parchmentmc.librarian.forgegradle" version "1.+"
    id "org.sonarqube" version "3.1.1"
    id "maven-publish"
    id "idea"
    id "eclipse"
}

repositories {
    maven { url "https://nexus.resourcefulbees.com/repository/maven-public/" }
}

version = mod_version
group = "com.resourcefulbees" // http://maven.apache.org/guides/mini/guide-naming-conventions.html

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
evaluationDependsOnChildren()

sourceSets {
    main {
        java.excludes = ['com/teamresourceful/resourcefulbees/datagen/**']
        resources {
            srcDirs += 'src/generated/resources'
            exclude '.cache'
        }
    }
    datagen {
        resources.srcDirs = main.resources.srcDirs
        resources.srcDirs.remove('src/generated/resources')
        java.srcDirs = main.java.srcDirs
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}


plugins.withId("idea") {
    sourceSets.main.output.resourcesDir("out/production/resources")
}

minecraft {
    mappings channel: "parchment", version: mapping

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')
            arg "-mixin.config=resourcefulbees.mixins.json"
            arg "-mixin.config=phosphophyllite.mixins.json"

            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "$projectDir/build/createSrgToMcp/output.srg"
            property 'fml.earlyprogresswindow','false'
            property 'mixin.debug.export', 'true'

            mods {
                resourcefulbees {
                    source sourceSets.main
                }
                Phosphophyllite {
                    source project(':Phosphophyllite').sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            arg "-mixin.config=resourcefulbees.mixins.json"
            arg "-mixin.config=phosphophyllite.mixins.json"

            property 'forge.logging.console.level', 'debug'
            property 'fml.earlyprogresswindow','false'

            mods {
                resourcefulbees {
                    source sourceSets.main
                }
                Phosphophyllite {
                    source project(':Phosphophyllite').sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.console.level', 'debug'
            args "--mod", "resourcefulbees", "--all", "--output", "\"" + file("src/generated/resources").toString() + "\"", "--validate", "--existing", "\"" + sourceSets.main.resources.srcDirs[0] + "\""
            mods {
                resourcefulbees {
                    source sourceSets.datagen
                }
                Phosphophyllite {
                    source project(':Phosphophyllite').sourceSets.main
                }
            }
        }
    }
}

mixin {
    add sourceSets.main, "${modid}.refmap.json"
}

dependencies {
    minecraft "net.minecraftforge:forge:$mc_version-$forge_version" //21

    compileOnly fg.deobf("mezz.jei:jei-1.18.2:$jei_version:api")
    runtimeOnly fg.deobf("mezz.jei:jei-1.18.2:$jei_version")

    compileOnly fg.deobf ("mcjty.theoneprobe:theoneprobe:$top_version:api") {
        transitive = false
    }
    runtimeOnly fg.deobf ("mcjty.theoneprobe:theoneprobe:$top_version") {
        transitive = false
    }

    //compileOnly fg.deobf ("team.chisel.ctm:CTM:$ctm_version")
    //runtimeOnly fg.deobf ("team.chisel.ctm:CTM:$ctm_version")

    compileOnly fg.deobf ("vazkii.patchouli:Patchouli:$patchouli_version:api")
    runtimeOnly fg.deobf ("vazkii.patchouli:Patchouli:$patchouli_version")

    ///runtimeOnly fg.deobf ("mekanism:Mekanism:${mekanism_version}")// core
    //runtimeOnly fg.deobf ("mekanism:Mekanism:${mekanism_version}:additions")// Mekanism: Additions
    //runtimeOnly fg.deobf ("mekanism:Mekanism:${mekanism_version}:generators")// Mekanism: Generators
    //runtimeOnly fg.deobf ("mekanism:Mekanism:${mekanism_version}:tools")// Mekanism: Tools

    //runtimeOnly fg.deobf ("com.simibubi.create:Create:$create_version")
    //runtimeOnly fg.deobf ("com.jozufozu.flywheel:Flywheel-Forge:$flywheel_version")

    implementation fg.deobf("software.bernie.geckolib:geckolib-1.18-forge:$geckolib_version")
    runtimeOnly fg.deobf("tech.thatgravyboat.dashboard:Forge:1.0.0")

    implementation project(':Phosphophyllite')

    compileOnly 'org.jetbrains:annotations:22.0.0'
    annotationProcessor 'org.spongepowered:mixin:0.8.5-SNAPSHOT:processor'
}

apply from: "gradle_files/injectModsToml.gradle"
apply from: "gradle_files/modJars.gradle"
apply from: "gradle_files/publishing.gradle"
apply from: "gradle_files/curse-publish.gradle"
apply from: "gradle_files/minimizePNGFile.gradle"
apply from: "gradle_files/sonar.gradle"